<resources>
    <string name="app_name">UwbLiao</string>
    <string name="settings">设置</string>
    <string name="txt_me">我</string>
    <string name="my_nickname">我的昵称</string>
    <string name="my_gender">我的性别</string>
    <string name="search_gender">寻找性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="gender_other">未知</string>
    <string name="gender_other1">不公开</string>
    <string name="gender_other2">不问</string>
    <string name="scan_nums">同时搜寻人数</string>
    <string name="txt_distance">距离</string>
    <string name="txt_invitation">你好</string>
    <string name="txt_chat_msg_in">接收</string>
    <string name="txt_chat_msg_out">发送</string>
    <string name="txt_comment">备注</string>
    <string name="txt_blacklist_title">黑名单</string>
    <string name="txt_blacklist_item_remove_msg">完成清除黑名单</string>
    <string name="txt_undo_blacklist_item_remove_msg">重设</string>
</resources>