<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_nickname"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/txt_my_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="10"
                android:textSize="20sp"
                android:hint="@string/my_nickname"
                android:autofillHints="@string/my_nickname" />
            <Space android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/my_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_gender"
                android:textSize="16sp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/rdMyGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <RadioButton
                    android:id="@+id/rdbMyGenderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_male"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdbMyGenderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_female"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdbMyGenderOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_other1"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/remote_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_gender"
                android:textSize="16sp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/rdRemoteGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <RadioButton
                    android:id="@+id/rdbRemoteGenderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_male"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdbRemoteGenderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_female"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdbRemoteGenderOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_other2"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_nums"
                android:textSize="16sp"
                android:textStyle="bold" />
            <NumberPicker
                android:id="@+id/scan_nums"
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_marginStart="30dp"
                android:theme="@style/Theme.Picker"
                />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>