<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/txt_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_nickname"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/txt_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_distance"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_msg_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_border_01"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_msg_out"
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/txt_chat_msg_out"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="8"
            android:selectAllOnFocus="true"
            android:imeOptions="actionSend"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/img_send"
            android:layout_weight="0.1"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/txt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_comment"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="32"
        android:selectAllOnFocus="true"
        android:imeOptions="actionSend"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/img_interest"
            android:src="@drawable/ic_favorite_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_blacklist"
            android:src="@drawable/ic_blacklist_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:textSize="18sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_okay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/ok"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>